<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opentestsystem.delivery</groupId>
	<artifactId>tds-exam-results-transmitter</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>tds-exam-results-transmitter</name>
	<description>Report processor for TDS Exams</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.2.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<docker.image.prefix>fwsbac</docker.image.prefix>
		<spring.cloud.config.version>1.2.3.RELEASE</spring.cloud.config.version>
		<unit-tests.skip>false</unit-tests.skip>
		<integration-tests.skip>true</integration-tests.skip>
		<maven.release.plugin.version>2.5.3</maven.release.plugin.version>
		<jaxb-maven.version>2.3.1</jaxb-maven.version>
		<!-- TDS Version Props -->
		<tds-common.version>0.0.6</tds-common.version>
		<tds-exam-client.version>0.0.9</tds-exam-client.version>
		<tds-session-client.version>0.0.4</tds-session-client.version>
		<tds-assessment-client.version>0.0.7</tds-assessment-client.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-config</artifactId>
				<version>${spring.cloud.config.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<!-- TDS -->
		<dependency>
			<groupId>org.opentestsystem.delivery</groupId>
			<artifactId>tds-exam-client</artifactId>
			<version>${tds-exam-client.version}</version>
		</dependency>
		<dependency>
			<groupId>org.opentestsystem.delivery</groupId>
			<artifactId>tds-session-client</artifactId>
			<version>${tds-session-client.version}</version>
		</dependency>
		<dependency>
			<groupId>org.opentestsystem.delivery</groupId>
			<artifactId>tds-assessment-client</artifactId>
			<version>${tds-assessment-client.version}</version>
		</dependency>
		<dependency>
			<groupId>org.opentestsystem.delivery</groupId>
			<artifactId>tds-common</artifactId>
			<version>${tds-common.version}</version>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
		</dependency>

		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.benas</groupId>
			<artifactId>random-beans</artifactId>
			<version>3.5.0</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven.release.plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skipTests>${unit-tests.skip}</skipTests>
					<excludes>
						<exclude>**/*IntegrationTests.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<skipTests>${integration-tests.skip}</skipTests>
							<includes>
								<include>**/*IntegrationTests.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.4.10</version>
				<configuration>
					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
					<imageTags>
						<imageTag>${project.version}</imageTag>
						<imageTag>latest</imageTag>
					</imageTags>
					<dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
					<resources>
						<resource>
							<targetPath>/</targetPath>
							<directory>${project.build.directory}</directory>
							<include>${project.build.finalName}.jar</include>
						</resource>
					</resources>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>${jaxb-maven.version}</version>
				<executions>
					<execution>
						<id>xjc</id>
						<goals>
							<goal>xjc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!-- The package of your generated sources -->
					<packageName>tds.exam.results.trt</packageName>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<scm>
		<connection>scm:git:https://github.com/SmarterApp/TDS_ExamResultsTransmitter.git</connection>
		<developerConnection>scm:git:git://github.com/SmarterApp/TDS_ExamResultsTransmitter.git</developerConnection>
		<url>https://github.com/SmarterApp/TDS_ExamResultsTransmitter</url>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>central</id>
			<name>airdev-releases</name>
			<url>https://airdev.jfrog.io/airdev/libs-releases-local</url>
		</repository>
	</distributionManagement>
</project>
